--- a/sass/_gameBoardView.scss
+++ b/sass/_gameBoardView.scss
@@ -1,9 +1,9 @@
 .game-board {
   display: grid;
   gap: 1rem;
-  width: 85vw;
+  width: 90vw;
   max-width: 57.2rem;
-  margin: 0 auto;
+  justify-items: center;
 
   @include respond(phone) {
     max-width: 32.7rem;
